# mrt2-au3

./: .gitignore  CMakeLists.txt  FrameworkInfo.plist.in  HostInfo.plist.in  INSTALL.md  Info.plist.in  MODEL_LOADING.md  MRT2ModelDownloader.h  MRT2ModelDownloader.mm  MRT2ModelPaths.h  MRT2ModelPaths.mm  MagentaRT_AudioUnit.h  MagentaRT_AudioUnit.mm  README.md  SidechainReferenceCapture.h  package-lock.json  package.json
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
common/objc/: MagentaModelDownloader.h  MagentaModelDownloader.mm  MagentaModelManager.h  MagentaModelManager.mm
react_ui/: index.html
react_ui/config/: tsconfig.shared.json  vite.config.ts
react_ui/src/: App.tsx  forkTheme.ts  index.css  main.tsx
react_ui/src/components/: ForkMagentaToggle.tsx  MagentaSlider.tsx
scripts/: build-installer-pkg.sh  ci-reclaim-disk.sh  pkg-postinstall
